# esp32c6-lcd147-projects

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: build.md  display-ui.md  flash.md  hardware-specs.md  mcp-tool-design.md  new-project.md
blog/: mcp-on-microcontrollers.md
projects/01_ntp_clock/: CMakeLists.txt  README.md  sdkconfig.defaults.template
projects/01_ntp_clock/main/: CMakeLists.txt  Kconfig.projbuild  app_state.h  boot_screen.c  boot_screen.h  button.c  button.h  clock_face.c  clock_face.h  led_ctrl.c  led_ctrl.h  main.c  ntp_sync.c  ntp_sync.h  theme.c  theme.h  wifi_connect.c  wifi_connect.h
projects/02_wifi_monitor/: CMakeLists.txt  README.md  sdkconfig.defaults.template
projects/02_wifi_monitor/main/: CMakeLists.txt  Kconfig.projbuild  airtime.c  airtime.h  app_state.h  button.c  button.h  channel_util.c  channel_util.h  device_counter.c  device_counter.h  led_ctrl.c  led_ctrl.h  main.c  rf_metrics.c  rf_metrics.h  sniffer_tasks.c  sniffer_tasks.h  ui_display.c  ui_display.h  wifi_sniffer.c  wifi_sniffer.h
projects/11_mcp_server_display/: CMakeLists.txt  README.md  sdkconfig.defaults.template  test_mcp.py
projects/11_mcp_server_display/main/: CMakeLists.txt  Kconfig.projbuild  drawing_engine.c  drawing_engine.h  idf_component.yml  main.c  mcp_server.c  mcp_server.h  snapshot.c  snapshot.h  ui_display.c  ui_display.h
projects/12_mcp_gpio/: CMakeLists.txt  README.md  sdkconfig.defaults.template  test_mcp.py
projects/12_mcp_gpio/main/: CMakeLists.txt  Kconfig.projbuild  board_config.h  gpio_state.c  gpio_state.h  idf_component.yml  led_status.c  led_status.h  main.c  mcp_server.c  mcp_server.h  mcp_tools.c  mcp_tools.h  ui_display.c  ui_display.h
shared/components/lcd_driver/: CMakeLists.txt  ST7789.c  ST7789.h
